k8s/streaming-service/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-api
  namespace: default
  labels:
    app.kubernetes.io/name: streaming-api
    app.kubernetes.io/component: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: streaming-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: streaming-api
    spec:
      containers:
        - name: server
          image: meta/gin-streaming:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: media-storage
              mountPath: /app/media # Must match the value in song-api-storage-config
      
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            # Connects to the exact same PVC as the song-api
            claimName: song-media-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: streaming-api
  namespace: default
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: streaming-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
